{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 77,
  "lineage": "eb3fcb5f-74f6-a165-f080-9de4fd1f306f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce55a84037d667dc",
            "association_id": "eipassoc-028f3e1812c23955e",
            "domain": "vpc",
            "id": "eipalloc-0ce55a84037d667dc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d3b3acbc3a7da80e",
            "private_dns": "ip-10-10-0-81.ec2.internal",
            "private_ip": "10.10.0.81",
            "public_dns": "ec2-54-164-226-143.compute-1.amazonaws.com",
            "public_ip": "54.164.226.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-hn-test"
            },
            "tags_all": {
              "Name": "eip-hn-test"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02dd13736b3f306db",
            "association_id": "eipassoc-010285628e90a18dd",
            "domain": "vpc",
            "id": "eipalloc-02dd13736b3f306db",
            "instance": "i-051e2c04414680800",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010fd5d60951e3f0c",
            "private_dns": "ip-10-10-0-51.ec2.internal",
            "private_ip": "10.10.0.51",
            "public_dns": "ec2-3-213-11-226.compute-1.amazonaws.com",
            "public_ip": "3.213.11.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-hn-test"
            },
            "tags_all": {
              "Name": "eip-hn-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:686638601960:instance/i-067fe7d2b1d5ad3ad",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067fe7d2b1d5ad3ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0316a82f4f06652",
            "private_dns": "ip-10-10-0-187.ec2.internal",
            "private_ip": "10.10.0.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b327217669ae7e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f8f220deda2bebd",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bb9422efb7aaa82"
            ]
          },
          "dependencies": [
            "aws_security_group.hn-test",
            "aws_subnet.public",
            "aws_vpc.hn-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:686638601960:instance/i-051e2c04414680800",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051e2c04414680800",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010fd5d60951e3f0c",
            "private_dns": "ip-10-10-0-51.ec2.internal",
            "private_ip": "10.10.0.51",
            "public_dns": "ec2-3-213-11-226.compute-1.amazonaws.com",
            "public_ip": "3.213.11.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0978ef449e913d166",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f8f220deda2bebd",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bb9422efb7aaa82"
            ]
          },
          "dependencies": [
            "aws_vpc.hn-test",
            "aws_security_group.hn-test",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:internet-gateway/igw-0ce155700f689521f",
            "id": "igw-0ce155700f689521f",
            "owner_id": "686638601960",
            "tags": {
              "Name": "igw-hn-test"
            },
            "tags_all": {
              "Name": "igw-hn-test"
            },
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce55a84037d667dc",
            "connectivity_type": "public",
            "id": "nat-06a5d5494882a245e",
            "network_interface_id": "eni-0d3b3acbc3a7da80e",
            "private_ip": "10.10.0.81",
            "public_ip": "54.164.226.143",
            "subnet_id": "subnet-00f8f220deda2bebd",
            "tags": {
              "Name": "nat-hn-test"
            },
            "tags_all": {
              "Name": "nat-hn-test"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.hn-test",
            "aws_eip.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:route-table/rtb-095ca3ca53734231a",
            "id": "rtb-095ca3ca53734231a",
            "owner_id": "686638601960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a5d5494882a245e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-private"
            },
            "tags_all": {
              "Name": "route-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hn-test",
            "aws_nat_gateway.hn-test",
            "aws_subnet.public",
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:route-table/rtb-08fe77c87984218cd",
            "id": "rtb-08fe77c87984218cd",
            "owner_id": "686638601960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce155700f689521f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-public"
            },
            "tags_all": {
              "Name": "route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hn-test",
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1f212ba2907d8fb",
            "route_table_id": "rtb-095ca3ca53734231a",
            "subnet_id": "subnet-07a05e3f809e23b3d"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.hn-test",
            "aws_eip.hn-test",
            "aws_nat_gateway.hn-test",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4e1f7b19ee4aa4",
            "route_table_id": "rtb-095ca3ca53734231a",
            "subnet_id": "subnet-0cc7be8867eef9de2"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.hn-test",
            "aws_eip.hn-test",
            "aws_nat_gateway.hn-test",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeea11a18c20c97f",
            "route_table_id": "rtb-08fe77c87984218cd",
            "subnet_id": "subnet-00f8f220deda2bebd"
          },
          "dependencies": [
            "aws_internet_gateway.hn-test",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.hn-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d5868c50e63a5d0",
            "route_table_id": "rtb-08fe77c87984218cd",
            "subnet_id": "subnet-0e74ccd4429e26b2c"
          },
          "dependencies": [
            "aws_internet_gateway.hn-test",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:security-group/sg-02bb9422efb7aaa82",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb9422efb7aaa82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security-test",
            "name_prefix": "",
            "owner_id": "686638601960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group-hn-test"
            },
            "tags_all": {
              "Name": "security_group-hn-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:subnet/subnet-07a05e3f809e23b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-07a05e3f809e23b3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686638601960",
            "tags": {
              "Name": "subnet_private0"
            },
            "tags_all": {
              "Name": "subnet_private0"
            },
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:subnet/subnet-0cc7be8867eef9de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0cc7be8867eef9de2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686638601960",
            "tags": {
              "Name": "subnet_private1"
            },
            "tags_all": {
              "Name": "subnet_private1"
            },
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:subnet/subnet-00f8f220deda2bebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-00f8f220deda2bebd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686638601960",
            "tags": {
              "Name": "subnet_public0"
            },
            "tags_all": {
              "Name": "subnet_public0"
            },
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:subnet/subnet-0e74ccd4429e26b2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0e74ccd4429e26b2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686638601960",
            "tags": {
              "Name": "subnet_public1"
            },
            "tags_all": {
              "Name": "subnet_public1"
            },
            "vpc_id": "vpc-0e47b674467a1039c"
          },
          "dependencies": [
            "aws_vpc.hn-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hn-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686638601960:vpc/vpc-0e47b674467a1039c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04c5194e5d9ede370",
            "default_route_table_id": "rtb-04be0f2946715590e",
            "default_security_group_id": "sg-0d1064e2902dd57b6",
            "dhcp_options_id": "dopt-a739ccdd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e47b674467a1039c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04be0f2946715590e",
            "owner_id": "686638601960",
            "tags": {
              "Name": "vpc-hn-test"
            },
            "tags_all": {
              "Name": "vpc-hn-test"
            }
          }
        }
      ]
    }
  ]
}